--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Script
         run: .\assemble.ps1
-        shell: powershell
+        shell: pwsh
       - uses: lhotari/action-upterm@v1
         with:
           limit-access-to-actor: true 
