--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -6,6 +6,11 @@ jobs:
     name: Run Script
     runs-on: windows-latest
     steps:
-      - name: Run Script 
+      - uses: actions/checkout@v2
+      - name: Script
         run: .\assemble.ps1
         shell: pwsh
+      - uses: lhotari/action-upterm@v1
+        with:
+          limit-access-to-actor: true 
+          wait-timeout-minutes: 5 
