--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -7,10 +7,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Script
-        run: .\assemble.ps1
-        shell: pwsh
       - uses: lhotari/action-upterm@v1
         with:
           limit-access-to-actor: true 
-          wait-timeout-minutes: 5 
+      - name: Assemble Script
+        run: .\assemble.ps1
+        shell: pwsh
+       
