--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -11,9 +11,8 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       with:
         limit-access-to-actor: true
+        detached-session: true
     - uses: actions/checkout@v4
     - name: Run assemble script
       run: .\assemble.ps1
       shell: pwsh
-    
-           
