--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -16,7 +16,8 @@ jobs:
     - name: Run assemble script
       run: .\assemble.ps1
       shell: pwsh
-    - uses: actions/upload-artifact@v4
+    - uses: actions/checkout@v4
+    - uses: ncipollo/release-action@v1
       with:
-        name: build-artifact
-        path: d:/a/dflat/dflat/dflat-win-x64.zip
+        artifacts: d:/a/dflat/dflat/dflat-win-x64.zip
+        tag: "v1"
