--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,13 +7,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-      with:
-        limit-access-to-actor: true
-        detached: true
-    - name: Run assemble script
-      run: .\assemble.ps1
+    - name: Run test script
+      run: .\test.ps1
       shell: pwsh
     - uses: ncipollo/release-action@v1
       with:
