--- a/.github/workflows/build_dflat_linux_debug.yaml
+++ b/.github/workflows/build_dflat_linux_debug.yaml
@@ -19,5 +19,5 @@ jobs:
       shell: bash
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: d:/a/dflat/dflat/test-linux-x64.zip
+        artifacts: d:/a/dflat/dflat/test-linux-x64.tar.gz
         tag: "test-${{ github.run_number }}-${{ github.run_attempt }}"
