--- a/.github/workflows/build_dflat_linux_debug.yaml
+++ b/.github/workflows/build_dflat_linux_debug.yaml
@@ -17,10 +17,15 @@ jobs:
         chmod +x assemble-linux.sh
         ./assemble-linux.sh
       shell: bash
+    - name: Get latest release tag
+      id: latest_release
+      run: |
+        LATEST_TAG=$(gh release list --limit 1 --json tagName --jq '.[0].tagName')
+        echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+        echo "Latest release tag: $LATEST_TAG"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: ncipollo/release-action@v1
       with:
         artifacts: dflat-linux-x64.tar.gz
-        allowUpdates: true
-        updateOnlyUnreleased: false
-        omitBodyDuringUpdate: true
-        omitNameDuringUpdate: true
+        tag: ${{ steps.latest_release.outputs.tag }}
