--- a/.github/workflows/build_dflat_linux_debug.yaml
+++ b/.github/workflows/build_dflat_linux_debug.yaml
@@ -29,3 +29,7 @@ jobs:
       with:
         artifacts: dflat-linux-x64.tar.gz
         tag: ${{ steps.latest_release.outputs.tag }}
+        allowUpdates: true
+        updateOnlyUnreleased: false
+        omitBodyDuringUpdate: true
+        omitNameDuringUpdate: true
